integration_tests/codegen_fail/fail/union/enum_wrong_variant_field.stderr
error: GraphQL union enum allows only unnamed variants with a single field, e.g. `Some(T)`

  = note: https://spec.graphql.org/June2018/#sec-Unions

 --> fail/union/enum_wrong_variant_field.rs:5:5
  |
5 |     A { human: Human },
  |     ^

error: GraphQL union enum allows only unnamed variants with a single field, e.g. `Some(T)`

  = note: https://spec.graphql.org/June2018/#sec-Unions

  --> fail/union/enum_wrong_variant_field.rs:10:6
   |
10 |     A(Human, u8),
   |      ^^^^^^^^^^^
